@@ -18,10 +18,10 @@ along with Goblin Camp. If not, see <http://www.gnu.org/licenses/>.*/
 
 #include <utility>
 #include <list>
-
 #if GCAMP_USE_THREADS
-#include <boost/thread/shared_mutex.hpp>
+#include <shared_mutex>
 #endif
+
 #include <boost/multi_array.hpp>
 #include <boost/unordered_set.hpp>
 #include <libtcod.hpp>
@@ -161,7 +161,7 @@ public:
 	
 	Coordinate FindRangedAdvantage(const Coordinate&);
 #if GCAMP_USE_THREADS
-	mutable boost::shared_mutex cacheMutex;
+	mutable std::shared_mutex cacheMutex;
 #endif
 	void UpdateCache();
 	void TileChanged(const Coordinate&);
