@@ -747,7 +747,7 @@ Coordinate Map::FindRangedAdvantage(const Coordinate& center) {
 
 void Map::UpdateCache() {
 #if GCAMP_USE_THREADS
-	boost::unique_lock<boost::shared_mutex> writeLock(cacheMutex);
+	std::unique_lock writeLock(cacheMutex);
 #endif
 	for (boost::unordered_set<Coordinate>::iterator tilei = changedTiles.begin(); tilei != changedTiles.end();) {
 		cachedTile(*tilei) = tile(*tilei);
